@@ -8,9 +8,10 @@
 - Added `console.cellcount()` function to count the cells a string will use when displayed.
 - Added `console.plaintext()` function to remove ANSI escape codes from a string.
 - Clink now sets `%=clink.bin%` that points to the Clink binaries directory.  This can be particularly useful for a portable installation of Clink so that scripts can find the Clink binaries directory and construct relative paths to other nearby files.
+- Clean up column alignment in `--help` texts.
 - Fixed `history.sticky_search` with anchored history search.
 - Fixed `clink inject --profile` to use correct log file name while initially injecting.
-- Clean up column alignment in `--help` texts.
+- Fixed Clink autorun to be more compatible with Cmder ([Cmder #2536](https://github.com/cmderdev/cmder/issues/2536)).
 
 ### v1.2.4
 
